# Multiplayer-Snake

./: README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/server/: errors.rs  messages.rs  mod.rs  snake.rs  types.rs
backend/src/tests/: mod.rs
frontend/: .env  .env.production  .eslintrc.json  deploy.sh  package-lock.json  package.json  vite.config.js
frontend/src/: config.jsx  main.jsx  routes.js  store.jsx
frontend/src/css/: Arena.css
frontend/src/features/: Arena.jsx  Game.jsx  Gateway.jsx  Landing.jsx  Tile.jsx
frontend/src/reducers/: gameStateSlice.jsx  store.jsx  userSlice.jsx
frontend/src/redux_logic/: selectors.jsx  store.jsx
frontend/src/redux_logic/slices/: gameStateSlice.jsx  userSlice.jsx
