[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = "1.20.1"
serde = {version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
clap = {version = "3.2.17", features=["derive"] }