[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = "*"
tokio = { version = "1.20.1", features = ["full"] }
serde = {version = "1.0.143", features = ["derive"] }
serde_json = "1.0"
clap = {version = "3.2.17", features=["derive"] }
log = "0.4.17"
env_logger = "0.9.0"
error-stack = "0.1.1"
dashmap = "5.3.4"
tokio-util = {version = "0.7.3", features=["full"]}
tokio-serde = {version = "0.8.0", features=["json"] }
futures = "0.3.23"
futures-util = "0.3.23"
parking_lot = "0.12.1"
rand = "*"
rand_chacha = "0.3.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
    "serde",
]